--- a/TrabajoIApp/app/src/main/res/values/strings.xml
+++ b/TrabajoIApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Asignaturas</string>
+    <string name="button_text">Agregar</string>
+    <string name="editText_hint">Ingrese asignatura...</string>
+    <string name="textView_text">Mis asignaturas</string>
 </resources>
