--- a/RecyclerAndCardViewApp/app/src/main/res/values/strings.xml
+++ b/RecyclerAndCardViewApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">RecyclerAndCardViewApp</string>
+    <string name="app_name">Mis Asignaturas</string>
 </resources>
